--- a/style.css
+++ b/style.css
@@ -1,65 +1,48 @@
 html{
     background-color: #8FBC8F;
 }
-.sqr1{
+.container{
+    display:flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 70px;
+    margin-top: 800px;
+    /* margin-bottom: 500px; */
+}
+.sqr{
+    height: 590px;
+    width: 500px;
     background-color: white;
-    height: 35rem;
-    width: 50%;
-    margin-left: 25%;
-    position: relative;
-    margin-top: 50px;
+    border: 5px solid black;
+
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+
+    font-size: 25px;
+    padding: 20px;
 }
-#willaImg{
-    position: absolute;
-    left: 130px;
-    top: 20px;
-}
-#descricaoImgW{
-    position: absolute;
-    top: 325px;
-    left: 200px;
-    font-size: 2rem;
-}
-.sqr2{
+.sqrM{
+    height: 720px;
+    width: 500px;
     background-color: white;
-    height: 35rem;
-    width: 50%;
-    margin-left: 25%;
-    position: relative;
-    margin-top: 50px;
-    
+    border: 5px solid black;
+
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+
+    font-size: 25px;
+    padding: 20px;
 }
-#elvisImg{
-    position: absolute;
-    left: 130px;
-    top: 20px;
-}
-#descricaoImgE{
-    position: absolute;
-    top: 325px;
-    left: 200px;
-    font-size: 2rem;
-}
-.sqr3{
-    background-color: white;
-    height: 45rem;
-    width: 50%;
-    margin-left: 25%;
-    position: relative;
-    margin-top: 50px;
-    
-}
-#mingauImg{
-    position: absolute;
-    left: 130px;
-    top: 20px;
-    
-    
-}
-.descricaoImgM{
-    position: absolute;
-    top: 325px;
-    left: 200px;
-    font-size: 2rem;
-    top: 440px;
+
+h2{
+  font-family: "Edu NSW ACT Hand Pre", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
